# magma-directed

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .shellcheckrc  README.md
docker/: Dockerfile
fuzzers/aflgo/: build.sh  fetch.sh  instrument.sh  preinstall.sh  run.sh  runonce.sh
fuzzers/aflgo/src/: fuzzer.patch
fuzzers/aflgo_new/: build.sh  fetch.sh  findings.sh  instrument.sh  preinstall.sh  run.sh  runonce.sh
fuzzers/aflplusplus/: build.sh  fetch.sh  instrument.sh  preinstall.sh  run.sh  runonce.sh
fuzzers/aflplusplus_lto_asan/: findings.sh
fuzzers/analysis_indirect_edges/: CMakeLists.txt  analysis_entrypoint  build.sh  fetch.sh  findings_all.sh  instrument.sh  preinstall.sh  runonce.sh  runonce_all.sh
fuzzers/analysis_indirect_edges/pass/: CMakeLists.txt  IndirectBranchCounter.cpp
fuzzers/analysis_indirect_edges/wrapper/: CMakeLists.txt  indicalls_cc.in
fuzzers/beacon/: build.sh  fetch.sh  instrument.sh  preinstall.sh  run.sh
fuzzers/beacon/src/: icfg_index.py
fuzzers/beacon/src/reachability-fast/: Cargo.toml
fuzzers/honggfuzz_asan/: findings.sh
fuzzers/k_scheduler/: findings.sh
fuzzers/libafl/: build.sh  configrc  fetch.sh  instrument.sh  preinstall.sh  run.sh  runonce.sh
fuzzers/libaflgo_aflgo/: build.sh  common_instrument.sh  configrc  fetch.sh  instrument.sh  runonce.sh
fuzzers/libaflgo_dafl/: configrc  fetch.sh  instrument.sh  preinstall.sh
fuzzers/libaflgo_hawkeye/: build.sh  common_instrument.sh  configrc  fetch.sh  findings.sh  instrument.sh  preinstall.sh  run.sh  runonce.sh  stub_rt.c
fuzzers/libfuzzer/: build.sh  findings.sh  instrument.sh  preinstall.sh  run.sh
fuzzers/libfuzzer_asan/: fetch.sh  instrument.sh  run.sh  runonce.sh
fuzzers/sievefuzz/: build.sh  configrc  fetch.sh  find_function_by_line.py  instrument.sh  preinstall.sh  prerun.sh  run.sh  runonce.sh
fuzzers/sievefuzz/src/: afl-fuzz.diff  afl-llvm-pass.diff  repo.patch  svf-util.diff
magma/: all_findings.sh  apply_patches.sh  directed.sh  fix_seeds.sh  gather_resusage.sh  preinstall.sh  run.sh  sanitizers.sh
magma/src/: canary.c  canary.h  monitor.c  storage.c  storage.h
magma/src/arch/: x86.h
targets/libpng/: build.sh  configrc
targets/libsndfile/: build.sh  configrc
targets/libtiff/: build.sh  configrc
targets/libxml2/: build.sh  configrc
targets/libxml2/src/: libxml2_xml_read_memory_fuzzer.cc
targets/lua/: build.sh  configrc
targets/openssl/: build.sh  configrc
targets/php/: build.sh  configrc
targets/poppler/: build.sh  configrc  fetch.sh
targets/poppler/patches/setup/: poppler.patch
targets/sqlite3/: build.sh  configrc
targets/sqlite3/corpus/sqlite3_fuzz/: src:fuzzdata1,sqlid:000078.sql  src:fuzzdata1,sqlid:000118.sql  src:fuzzdata1,sqlid:000146.sql  src:fuzzdata1,sqlid:000197.sql  src:fuzzdata1,sqlid:000210.sql  src:fuzzdata1,sqlid:000249.sql  src:fuzzdata1,sqlid:000273.sql  src:fuzzdata1,sqlid:000300.sql  src:fuzzdata1,sqlid:000306.sql  src:fuzzdata1,sqlid:000385.sql  src:fuzzdata1,sqlid:000401.sql  src:fuzzdata1,sqlid:000425.sql  src:fuzzdata1,sqlid:000430.sql  src:fuzzdata1,sqlid:000456.sql  src:fuzzdata1,sqlid:000463.sql  src:fuzzdata1,sqlid:000606.sql  src:fuzzdata1,sqlid:000669.sql  src:fuzzdata1,sqlid:000671.sql  src:fuzzdata1,sqlid:000756.sql  src:fuzzdata1,sqlid:000757.sql  src:fuzzdata1,sqlid:000771.sql  (+854 more)
targets/tests/: build.sh  configrc  fetch.sh
targets/tests/src/: .clang-format  Makefile  lib.c  lib.h  test01.c  test02.cpp
tools/: check_perf_stats.sh  find_duplicates.py  findings_script_gen.py  runonce_script_gen.py  sqlite_extract.py
tools/benchd/: exp2json.py
tools/captain/: build.sh  common.sh  run.sh  run_analysis.sh  run_analysis_single.sh  start.sh
(+2 files in other folders)
